--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,14 +1,19 @@
+---
+import { Image } from "astro:assets";
+---
+
 <footer>
   <div class="footer-wrapper">
     <div class="menu">
       <div class="logo">
-        <img
+        <Image
+          width="200"
+          height="150"
+          format="webp"
           class="img"
           src="/mainLogo.jpeg"
           alt="Logo"
-          decoding="async"
           loading="lazy"
-          loading="eager"
         />
       </div>
       <div class="menu-list">
@@ -32,17 +37,12 @@
     </span>
     <div class="social-media">
       <div class="social-media-content">
-        <a
-          href="https://www.google.com/search?q=hammerhead+scuba+diving+cozumel&oq=hammer&gs_lcrp=EgZjaHJvbWUqBggCECMYJzIOCAAQRRg5GEMYgAQYigUyBwgBEC4YgAQyBggCECMYJzIMCAMQABhDGIAEGIoFMgwIBBAAGEMYgAQYigUyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg0NDAzajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#lrd=0x8f4e57005df3a099:0xe7e5a151dc640a4a,1,,,,"
-          target="_blank">Instagram</a
+        <a href="https://www.instagram.com/hammerheadcozumel/" target="_blank"
+          >Instagram</a
         >
         <a
-          href="https://www.google.com/search?q=hammerhead+scuba+diving+cozumel&oq=hammer&gs_lcrp=EgZjaHJvbWUqBggCECMYJzIOCAAQRRg5GEMYgAQYigUyBwgBEC4YgAQyBggCECMYJzIMCAMQABhDGIAEGIoFMgwIBBAAGEMYgAQYigUyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg0NDAzajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#lrd=0x8f4e57005df3a099:0xe7e5a151dc640a4a,1,,,,"
+          href="https://www.facebook.com/profile.php?id=61553035995499"
           target="_blank">Facebook</a
-        >
-        <a
-          href="https://www.google.com/search?q=hammerhead+scuba+diving+cozumel&oq=hammer&gs_lcrp=EgZjaHJvbWUqBggCECMYJzIOCAAQRRg5GEMYgAQYigUyBwgBEC4YgAQyBggCECMYJzIMCAMQABhDGIAEGIoFMgwIBBAAGEMYgAQYigUyBggFEEUYPDIGCAYQRRg8MgYIBxBFGDzSAQg0NDAzajBqN6gCALACAA&sourceid=chrome&ie=UTF-8#lrd=0x8f4e57005df3a099:0xe7e5a151dc640a4a,1,,,,"
-          target="_blank">YouTube</a
         >
       </div>
     </div>
