--- a/src/components/FormsToDownload.astro
+++ b/src/components/FormsToDownload.astro
@@ -1,7 +1,14 @@
+---
+import { Image } from "astro:assets";
+---
+
 <formsToDownload>
   <div class="forms-wrapper">
     <div class="image">
-      <img
+      <Image
+        width="200"
+        height="150"
+        format="webp"
         class="image-item"
         src="/blogWrapper1.jpg"
         alt="foto de 3 busos en un arrefice con uchos peces"
