--- a/src/components/MiniGallery.astro
+++ b/src/components/MiniGallery.astro
@@ -1,26 +1,45 @@
+---
+import { Image } from "astro:assets";
+---
+
 <miniGallery>
   <div class="wrapper">
-    <img
+    <Image
+      width="200"
+      height="150"
+      format="webp"
       class="image"
       src="/miniGallery/image1.jpeg"
       alt="boy and girl snorkeling at el cielo reef in cozumel"
     />
-    <img
+    <Image
+      width="200"
+      height="150"
+      format="webp"
       class="image"
       src="/miniGallery/image2.jpg"
       alt="two people snorkeling but camera is also showing above water level"
     />
-    <img
+    <Image
+      width="200"
+      height="150"
+      format="webp"
       class="image"
       src="/miniGallery/image3.webp"
       alt="girl snorkeling down to a reef in Cozumel Mexico's blue water"
     />
-    <img
+    <Image
+      width="200"
+      height="150"
+      format="webp"
       class="image"
       src="/miniGallery/image4.jpeg"
       alt="Girl snorkeling next to a sea turtle in Cozumel's turtle reel"
     />
-    <img
+    <Image
+      width="200"
+      height="150"
+      format="webp"
       class="image"
       src="/miniGallery/image5.jpeg"
       alt="Guy snorkels with large school of fish looks at camera and says hi"
