--- a/src/pages/specialty.astro
+++ b/src/pages/specialty.astro
@@ -12,7 +12,7 @@ import FormsToDownload from "../components/FormsToDownload.astro";
   <HeroImage
     title="SPECIALTY DIVES"
     subtitle="Explore vibrant reefs, ancient wrecks, and marine marvels with our expert guides, we are here to make your experience unforgettable."
-    image="/public/packageBg1.jpg"
+    image="/packageBg1.jpg"
     alt="diver looking at camera while diving in deep blue ocean"
   />
   <LionFishHunting
