--- a/src/components/BlogCta.astro
+++ b/src/components/BlogCta.astro
@@ -1,3 +1,7 @@
+---
+import { Image } from "astro:assets";
+---
+
 <blogCta>
   <div class="content-wrapper-row">
     <div class="video-wrapper">
@@ -5,7 +9,10 @@
     </div>
     <div class="blog-cta-wrapper">
       <div class="image">
-        <img
+        <Image
+          width="200"
+          height="150"
+          format="webp"
           class="image-item"
           src="/blogWrapper1.jpg"
           alt="foto de 3 busos en un arrefice con uchos peces"
