--- a/src/components/HeroImage.astro
+++ b/src/components/HeroImage.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from "astro:assets";
 import HeroCtaBtn from "../components/HeroCtaBtn.astro";
 interface Props {
   title: string;
@@ -12,7 +13,7 @@ const { subtitle, title, image, alt } = Astro.props;
 
 <astro-hero>
   <div class="hero-wrapper">
-    <img src={image} alt={alt} />
+    <Image width="200" height="150" format="webp" src={image} alt={alt} />
     <div class="content">
       <h1>{title}</h1>
       <p>{subtitle}</p>
