Pretty much done

--- a/src/components/FormsToDownload.astro
+++ b/src/components/FormsToDownload.astro
@@ -34,7 +34,7 @@ import { Image } from "astro:assets";
         <div class="download-item">
           <span>Liability Release</span>
           <a
-            href="Liability-Form.pdf"
+            href="/Liability-Form.pdf"
             download="Liability Release Form"
             class="download-btn">Download</a
           >
@@ -42,7 +42,7 @@ import { Image } from "astro:assets";
         <div class="download-item">
           <span>Medical Form</span>
           <a
-            href="Medical-Form.pdf"
+            href="/Medical-Form.pdf"
             download="Medical Forms Form"
             class="download-btn">Download</a
           >
