--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -28,7 +28,7 @@ import PrimaryCta from "../components/PrimaryCta.astro";
         target="_blank">Reviews</a
       >
     </li>
-    <li><a href="#">Blog</a></li>
+    <li><a href="https://blog.hammerheadcozumel.com/">Blog</a></li>
   </ul>
   <div class="cta">
     <PrimaryCta href="/booking" title="Book Now" />
