--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -56,6 +56,14 @@ import MiniLinks from "../components/MiniLinks.astro";
       img="/Jeobani.jpg"
       alt="Jeobani"
     />
+    <br />
+    <StaffReversed
+      name="Brad"
+      role="Volunteer photographer"
+      description="Brad is a very good friend of the shop and volunteers his services as a photographer and support staff!."
+      img="/brad.webp"
+      alt="Brad"
+    />
   </div>
   <ReadyToBook />
   <div class="our-boat">
@@ -122,7 +130,7 @@ import MiniLinks from "../components/MiniLinks.astro";
     flex-direction: column;
   }
   .our-boat h2 {
-    color:;
+    color: ;
     font-size: xxx-large;
     text-align: center;
     padding: 2rem 0;
