--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,10 +19,10 @@ const { title } = Astro.props;
     />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <link rel="icon" href="/snorkel2.webp" type="image" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/snorkel2.webp" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/snorkel2.webp" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/snorkel2.webp" />
+    <link rel="icon" href="/cover.webp" type="image" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/cover.webp" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/cover.webp" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/cover.webp" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
